--- a/Grocery_Shop_1.html
+++ b/Grocery_Shop_1.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Grocery_Shop_1</title>
-    <link rel="stylesheet" href="Grocery_Shop_1.css">
+    <link rel="stylesheet" href="Grocery_Shop_home.css">
   </head>
   <body>
     <div class="navi">
           <div class="navi1">
-            HOME
+            <a href="#" target="_blank">HOME</a>
           </div>
           <div class="navi2">
-            LOGIN
+            <a href="#" target="_blank">LOGIN</a>
           </div>
           <div class="navi3">
-            ORDER ONLINE
+            <a href="#" target="_blank">ORDER ONLINE</a>
           </div>
           <div class="navi4">
-            ABOUT US
+            <a href="#" target="_blank">ABOUT US</a>
           </div>
     </div>
 
@@ -30,16 +30,21 @@
     <hr>
 
     <div class="images3">
+      <div class="space1"></div>
       <div class="image1">
-        <center><img src="whatsapp.jpg" alt="whatsapp" width=100px height=100%/></center>
+        <img src="whatsapp.jpg" alt="whatsapp" width=100% height=195px/>
       </div>
+      <div class="space2"></div>
       <div class="image2">
-        <center><img src="twitter.jpg" alt="twitter" width=100px height=100%/></center>
+        <img src="twitter.jpg" alt="twitter" width=100% height=195px/>
       </div>
+      <div class="space3"></div>
       <div class="image3">
-       <center><img src="knnc.jpg" alt="knnc" width=100px height=100%/></center>
+       <img src="instagram.jpg" alt="instagram" width=100% height=195px/>
       </div>
 
     </div>
+
+
   </body>
 </html>
